<resources>
    <string name="app_name">Timeline</string>
    <string name="timelineButton">Timeline Options</string>
    <string name="toolsButton">Tools</string>
    <string name="settingsButton">Settings</string>
    <string name="dateBox">Date</string>
    <string name="timeBox">Time</string>
    <string name="eventPreview">Event Preview</string>
    <string name="getDateTime">Select Date/Time</string>
</resources>
